tests/NormalTests/paczka1/small_fuzzy/82130490.err
Error in line 2: S689 S689 65,37
Error in line 10: OrfHd S689 73,0
